--- a/styles.css
+++ b/styles.css
@@ -15,21 +15,19 @@ font-family: "Yeseva One", cursive;
 
 body {
 	margin: 0;
-	font-family: Nunito Sans; Yeseva One;
-}
-
-body {
+	font-family: Nunito Sans;
 	box-sizing: border-box;
+	background-color: white;
 }
 
 .container {
-	max-width: 1299px;
+	max-width: 1300px;
 	margin: 0 auto;
 }
 
 .header {
 	background-color: black;
-	}
+}
 
 .header-content {
 	display: flex;
@@ -44,7 +42,6 @@ body {
     border-radius: 2px;
     outline: 0;
     border: 0;
-    padding: 13px 33px;
     color: white;
     text-transform: uppercase;
     font-family: 'Nunito Sans';
@@ -55,19 +52,49 @@ body {
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    margin-top: 40px;
+	width: 207px;
+	height: 51px;
+	cursor: pointer;
+}
+
+.header_button {
+	background: #E3B873;
+    box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.2);
+    border-radius: 2px;
+    outline: 0;
+    border: 0;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Nunito Sans';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+	width: 160px;
+	height: 37px;
+	cursor: pointer;
 }
 
 .button-1 {
 	background: #E3B873;
     box-shadow: 0px 5px 15px rgba(227, 184, 115, 0.3);
     border-radius: 2px;
-    margin-left: 114px;
-    margin-right: 20px;
 }
 
 .button-2 {
 	bottom: 0%;
-    background: rgba(0, 0, 0, 0.7);
+    background: transparent;
+    border: 1px solid #FFFF;
+    margin-left: 20px;
+}
+
+.button-2:hover {
+	background: #E3B873;
+	border:unset;
 }
 
 .logo {
@@ -82,6 +109,7 @@ body {
 
 .tel {
 	color: #E3B873;
+	font-size: 11px;
 }
 
 .header-navigation {
@@ -108,7 +136,13 @@ body {
 	background-size: cover;
 	height: 707px;	
 	padding-top: 194px;
-	}
+	position: relative;
+}
+
+.hero-container {
+	position:relative;
+	z-index: 1;
+}
 
 #hero-overlay {
 	content: "";
@@ -143,7 +177,345 @@ body {
 	margin: 0 auto;
 }
 
+.window {
+	background: #131313;
+	padding-bottom: 391px;
+}
+
+.admiral {
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 43px;
+	width: 736px;
+	margin-left: 548px;
+}
+
+.admiral-item {
+	margin-right: 60px;
+}
+
+.admiral-item a {
+	text-decoration: none;
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 19px;
+	text-transform: uppercase;
+}
+
+.main {
+	display: flex;
+}
+
+.projects {
+	width: 500px;
+	margin-right: 86px;
+}
+
+.CP {
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 27px;
+	line-height: 37px;
+	letter-spacing: -0.07em;
+	text-transform: uppercase;
+	color: #E3B873;
+}
+
+.description {
+	font-family: 'Nunito Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 27px;
+	color: #FFFFFF;
+}
+
+.grid-container {
+	display: grid;
+	grid-template-columns: auto auto;
+}
+
+.big {
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 25px;
+	text-transform: uppercase;
+	color: #E3B873;
+}
+
+.small {
+	font-family: 'Nunito Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 21px;
+	color: #FFFFFF;
+}
+
+.foto {
+	background-image: url(./images/window.jpg);
+	height: 482px;
+	width: 679px;
+}
+
+.group {
+	background-image: url(./images/group.svg);
+	height: 13px;
+	width: 205px;
+	border-radius: [object Object]px;
+	margin-top: 122px;
+}
 
 
-	
 
+.cam {
+	background-image: url(./images/cam.svg);
+	height: 66px;
+	width: 196px;
+	margin-left: 578px;
+}
+
+.online-container {
+	margin-top: -300px;
+}
+
+.work {
+	background-image: url(./images/work.jpg);
+	height: 434px;
+	width: 817px;
+	margin-top: 30px;
+	margin-left: 258px;
+}
+
+.shadow {
+	background-image: url(./images/shadow.jpg);
+	height: 434px;
+	width: 817px;
+	margin-top: 30px;
+	margin-left: 258px;
+	background: rgba(0, 0, 0, 0.8);
+	margin-top: -434px;
+}
+
+.play {
+	background-image: url(./images/play.svg);
+	height: 116px;
+	width: 116px;
+	border-radius: 0px;
+	margin-top: -565px;
+	margin-left: 567px;
+}
+
+#hr {
+	height: 1.5px;
+	width: 55px;
+	border-radius: 30px;
+	background: #E3B873;
+	margin-top: 62px;
+	margin-bottom: 36px;
+}
+
+.facility {
+	font-family: 'Nunito Sans';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 37px;
+	text-align: center;
+	color: #363636;
+}
+
+.form {
+	background-image: url(./images/form.svg);
+	height: 58px;
+	width: 769px;
+	border-radius: [object Object]px;
+	margin-top: 490px;
+	margin-left: 255px;
+}
+
+.agree {
+	background-image: url(./images/agree.svg);
+	width: 285px;
+	height: 18px;
+	margin-top: 26px;
+	margin-left: 495px;
+}
+
+.typesof {
+	background-image: url(./images/typesof.svg);
+	width: 257px;
+	height: 67px;
+	margin-top: 147px;
+	margin-left: 495px;
+}
+
+.repair {
+	display: flex;
+	justify-content: space-between;
+	height: 607px;
+	width: 1235px;
+	border-radius: 0px;
+	margin-top: 29px;
+}
+
+.one {
+	background-image: url(./images/one.jpg);
+	height: 421px;
+	width: 392px;
+	border-radius: 0px;
+}
+
+.redecorating {
+	margin-top: 296px;
+	margin-left: 35px;
+	height: 286px;
+	width: 330px;
+	border-radius: 0px;
+	background: #FFFFFF;
+	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.titleone {
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 25px;
+	color: #363636;
+	padding-left: 24px;
+	padding-top: 20px;
+}
+
+.ulclass {
+	font-family: Nunito Sans;
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 27px;
+	letter-spacing: 0em;
+	text-align: left;
+	color: #959595;
+	margin-bottom: 0px;
+}
+
+.button-one {
+	background: #E3B873;
+	box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+	height: 54px;
+	width: 228px;
+	border-radius: 0px;
+	margin-top: -19px;
+	margin-left: 33px;
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 25px;
+	text-transform: uppercase;
+	color: #FFFFFF;
+}
+
+.two {
+	background-image: url(./images/two.jpg);
+	height: 421px;
+	width: 392px;
+	border-radius: 0px;
+}
+
+.overhaul {
+	margin-top: 296px;
+	margin-left: 35px;
+	height: 286px;
+	width: 330px;
+	border-radius: 0px;
+	background: #FFFFFF;
+	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.button-two {
+	background: #E3B873;
+	box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+	height: 54px;
+	width: 228px;
+	border-radius: 0px;
+	margin-top: -19px;
+	margin-left: 33px;
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 25px;
+	text-transform: uppercase;
+	color: #FFFFFF;
+}
+
+.three {
+	background-image: url(./images/three.jpg);
+	height: 421px;
+	width: 392px;
+	border-radius: 0px;
+}
+
+.designer {
+	margin-top: 296px;
+	margin-left: 35px;
+	height: 286px;
+	width: 330px;
+	border-radius: 0px;
+	background: #FFFFFF;
+	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.button-three {
+	background: #E3B873;
+	box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+	height: 54px;
+	width: 228px;
+	border-radius: 0px;
+	margin-top: -19px;
+	margin-left: 33px;
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 25px;
+	text-transform: uppercase;
+	color: #FFFFFF;
+}
+
+.list {
+	list-style: none;
+	margin-top: 200px;
+	margin-left: 100px;
+}
+
+.class {
+	display: flex;
+	padding-bottom: 100px;
+}
+
+.list-item {
+	background: #E3B873;
+    width: 49px;
+    height: 49px;
+    border: 8px solid #FFFFFF;
+    box-shadow: 0px 5px 15px rgb(227 184 115 / 15%);
+    border-radius: 50%;
+}
+
+.figure {
+	font-family: 'Yeseva One';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 25px;
+	text-align: center;
+	color: #FFFFFF;
+}
